<resources>
    <string name="app_name" translatable="false">NatureNav</string>
    <string name="search_hint">Search…</string>
    <string name="profile_image">Profile image</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>

    <string name="about_us_1" >We are a close-knit group of third-year students at Ca\' Foscari University, studying in the Computer Science department.</string>
    <string name="about_us_2" >We share a passion for technology and a common goal: to develop an innovative and useful application for our clients.</string>
    <string name="about_us_3" >Our project is the result of months of hard work, in-depth research, and collaborative efforts to complete the Software Engineering course.</string>

    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_introduction">App Introduction</string>
    <string name="preference_file_key" translatable="false">com.appocalypse.naturenav.PREFERENCE_FILE_KEY</string>
    <string name="app_intro_played_key" translatable="false">app_intro_played_key</string>

    <string name="slide1_title">Welcome to NatureNav!</string>
    <string name="slide1_description">Explore the beauty of the great outdoors with NatureNav. Discover parks, trails, and much more.</string>
    <string name="slide2_title">Effortless Search</string>
    <string name="slide2_description">NatureNav simplifies the discovery of points of interest thanks to its powerful search function. Search for a site of interest, and we\'ll take care of the rest for you.</string>
    <string name="slide3_title">Explore Points of Interest</string>
    <string name="slide3_description">View a wide range of points of interest on our app, from parks to outdoor gyms. You\'ll never run out of options.</string>
    <string name="slide4_title">Rank and Rate</string>
    <string name="slide4_description">Give feedback and rate the places you visit. Help build a community of adventurers and enhance their experiences.</string>
    <string name="slide5_title">Location Permission</string>
    <string name="slide5_description">To unlock the full potential of NatureNav, grant us access to your location. Discover nearby nature spots effortlessly.</string>
    <string name="slide6_title">Get Ready!</string>
    <string name="slide6_description">Are you ready to start your adventure with NatureNav? Discover, explore, rate, and connect with fellow nature enthusiasts today!</string>

    <string name="sign_in_to_unlock_extra_functionalities">Sign-in to unlock extra functionalities</string>
    <string name="display_menu">Display menu</string>
    <string name="close_button">Close button</string>
    <string name="privacy_policy_text">Privacy Policy very long text \nLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sollicitudin erat in mauris blandit, a mattis massa eleifend. Curabitur dapibus ante in auctor dapibus. Nam ullamcorper et felis nec luctus. Nullam scelerisque felis in finibus rhoncus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut vitae odio laoreet, maximus ex quis, iaculis massa. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nunc pellentesque facilisis enim, dapibus laoreet lorem pulvinar ut. Nam pharetra convallis nibh pharetra ullamcorper. In tempor orci at quam efficitur interdum sed id tortor. Vestibulum ligula tortor, posuere eu lectus at, bibendum consequat justo. Mauris venenatis metus aliquet nibh dignissim, ut dignissim dolor interdum. Nunc ac eros quis mauris fermentum pretium.

Morbi aliquam ipsum ligula, eget rhoncus erat hendrerit aliquet. Vivamus tortor mauris, feugiat vitae ullamcorper at, imperdiet ut orci. Quisque a augue a diam maximus dapibus id nec enim. Praesent euismod neque at libero pellentesque, id lobortis diam facilisis. Ut id ornare enim. Nunc neque neque, pellentesque non tincidunt ac, cursus mollis velit. Integer egestas placerat orci, at gravida felis egestas in. Donec venenatis, est at maximus convallis, urna lorem suscipit dui, vitae ultricies tortor nulla in massa. Nam pellentesque congue mi eu malesuada. Sed suscipit egestas urna quis bibendum. Donec tempor libero ut ligula rutrum vestibulum.

Vestibulum non mollis libero. Proin eu vulputate erat, fermentum tincidunt ante. Curabitur auctor scelerisque dignissim. Nulla a urna sem. Fusce eleifend euismod felis et tincidunt. Quisque consectetur rhoncus egestas. Sed nec justo fringilla, cursus ligula quis, mollis augue. Nunc eleifend eu ipsum non mollis. Sed sodales erat vitae lorem porttitor, a rhoncus diam vehicula. Pellentesque ornare felis quis interdum ornare. Aliquam erat volutpat. Etiam ultrices, libero at fermentum accumsan, magna felis ullamcorper mauris, vel fermentum nibh lacus non justo.

Nulla facilisi. Proin venenatis, dolor sed vestibulum porttitor, odio enim molestie odio, vitae lobortis augue sapien a augue. Nulla id enim blandit ante facilisis lobortis eget id arcu. Morbi tempor libero scelerisque molestie pellentesque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc venenatis fermentum eros, in convallis tellus tincidunt eget. Vestibulum ac rutrum mauris. Ut eget sollicitudin est. Vestibulum placerat, orci ac bibendum tincidunt, purus orci dignissim mi, mattis efficitur dolor risus ac sem. Curabitur lobortis semper leo eleifend volutpat. Morbi quis libero justo.

Vestibulum dapibus blandit magna id elementum. Integer dapibus eu felis ac cursus. Sed a hendrerit ipsum. Suspendisse mattis facilisis urna vitae euismod. Nulla facilisi. Suspendisse libero libero, dapibus sit amet augue vitae, sollicitudin aliquet nisl. Cras dictum accumsan justo vitae ornare. Fusce consectetur vehicula pretium. Suspendisse nec posuere ipsum, sed tincidunt ante. Nullam ut felis risus. Duis venenatis, purus eget tristique ornare, dolor nulla hendrerit lorem, quis semper tellus sapien quis risus. Ut luctus tortor luctus libero vulputate hendrerit.</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
