<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_rounded">

    <ImageButton
        android:id="@+id/menu_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_close_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/dark_grey"
        android:contentDescription="@string/close_button"/>

    <TextView
        android:id="@+id/app_name_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/app_name"
        android:textColor="@color/dark_grey"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile_menu_button"
        style="@style/Theme.NatureNav.MenuButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="30dp"
        android:text="@string/profile"
        app:icon="@drawable/ic_person_outline_24"
        app:iconPadding="20dp"
        app:iconSize="20dp"
        app:iconTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name_menu" />

    <Button
        android:id="@+id/app_intro_menu_button"
        style="@style/Theme.NatureNav.MenuButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/app_introduction"
        app:icon="@drawable/ic_android_24"
        app:iconPadding="20dp"
        app:iconSize="20dp"
        app:iconTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_menu_button" />

    <Button
        android:id="@+id/setting_menu_button"
        style="@style/Theme.NatureNav.MenuButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings_24"
        app:iconPadding="20dp"
        app:iconSize="20dp"
        app:iconTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_intro_menu_button" />

    <Button
        android:id="@+id/about_us_menu_button"
        style="@style/Theme.NatureNav.MenuButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        app:icon="@drawable/ic_groups_24"
        app:iconPadding="20dp"
        app:iconSize="20dp"
        app:iconTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_menu_button" />

    <Button
        android:id="@+id/help_menu_button"
        style="@style/Theme.NatureNav.MenuButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/help"
        app:icon="@drawable/ic_help_outline_24"
        app:iconPadding="20dp"
        app:iconSize="20dp"
        app:iconTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_us_menu_button" />

    <Button
        android:id="@+id/privacy_policy_menu_button"
        style="@style/Theme.NatureNav.MenuButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        app:icon="@drawable/ic_privacy_tip_24"
        app:iconPadding="20dp"
        app:iconSize="20dp"
        app:iconTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_menu_button" />

    <Button
        android:id="@+id/open_source_menu_button"
        style="@style/Theme.NatureNav.MenuButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/open_source_licenses"
        app:icon="@drawable/ic_code_24"
        app:iconPadding="20dp"
        app:iconSize="20dp"
        app:iconTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privacy_policy_menu_button" />

</androidx.constraintlayout.widget.ConstraintLayout>