<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity">

    <TextView
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:font="@font/roboto_medium"
        android:text="@string/about_us"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="353dp"
        android:layout_height="66dp"
        android:layout_marginTop="348dp"
        android:font="@font/roboto_regular"
        android:text="@string/about_us_3"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="353dp"
        android:layout_height="66dp"
        android:layout_marginTop="188dp"
        android:font="@font/roboto_regular"
        android:text="@string/about_us_1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="353dp"
        android:layout_height="66dp"
        android:layout_marginTop="268dp"
        android:font="@font/roboto_regular"
        android:text="@string/about_us_2"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>